Add API to get URL statistics
